Replaced day1 local video with Bunny Stream embed

--- a/day1/day1-video.html
+++ b/day1/day1-video.html
@@ -32,10 +32,18 @@
       <p class="lead"><strong>Welcome to Your</strong> — 5 Day Reset.</p>
     </header>
     <div class="player">
-      <video controls playsinline preload="metadata" poster="day1.jpg">
-        <source src="day1vid.mp4" type="video/mp4" />
-        Sorry — your browser doesn’t support embedded video.
-      </video>
+      <div class="player">
+  <div style="position:relative;padding-top:56.25%;">
+    <iframe 
+      src="https://iframe.mediadelivery.net/embed/504868/4afb8964-ee9a-4713-9300-a72ec2a13294?autoplay=true&loop=false&muted=false&preload=true&responsive=true" 
+      loading="lazy" 
+      style="border:0;position:absolute;top:0;height:100%;width:100%;" 
+      allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" 
+      allowfullscreen="true">
+    </iframe>
+  </div>
+</div>
+
     </div>
     <div class="cta">
       <a class="btn" href="day1-cheatsheet.html" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
