Replaced Day 2 local video with Bunny Stream embed

--- a/day2/day2-video.html
+++ b/day2/day2-video.html
@@ -32,11 +32,17 @@
       <p class="lead"><strong>PMT isn’t the problem</strong> — your luteal phase is asking for this.</p>
     </header>
     <div class="player">
-      <video controls playsinline preload="metadata" poster="day2.jpg">
-        <source src="day2video.mp4" type="video/mp4" />
-        Sorry — your browser doesn’t support embedded video.
-      </video>
-    </div>
+  <div style="position:relative;padding-top:56.25%;">
+    <iframe 
+      src="https://iframe.mediadelivery.net/embed/504868/43e7403a-e607-4291-b208-526d7ef2850e?autoplay=true&loop=false&muted=false&preload=true&responsive=true" 
+      loading="lazy" 
+      style="border:0;position:absolute;top:0;height:100%;width:100%;" 
+      allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" 
+      allowfullscreen="true">
+    </iframe>
+  </div>
+</div>
+
     <div class="cta">
       <a class="btn" href="/cheatsheet/" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
       <a class="btn" href="mailto:rawtoresetsupport@artificialmomentum.com">Ask a Question</a>
