--- a/day3/day3-video.html
+++ b/day3/day3-video.html
@@ -31,12 +31,7 @@
       <h1>Day 3 · Raw to Reset</h1>
       <p class="lead"><strong>I’m not lazy</strong> — I need fuel.</p>
     </header>
-    <div class="player">
-      <video controls playsinline preload="metadata" poster="day3.jpg">
-        <source src="day3vid.mp4" type="video/mp4" />
-        Sorry — your browser doesn’t support embedded video.
-      </video>
-    </div>
+    <div style="position:relative;padding-top:56.25%;"><iframe src="https://iframe.mediadelivery.net/embed/504868/14c58830-5ffe-41b4-895a-78bc4c70f72f?autoplay=true&loop=false&muted=false&preload=true&responsive=true" loading="lazy" style="border:0;position:absolute;top:0;height:100%;width:100%;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" allowfullscreen="true"></iframe></div>
     <div class="cta">
       <a class="btn" href="/cheatsheet/" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
       <a class="btn" href="mailto:rawtoresetsupport@artificialmomentum.com">Ask a Question</a>
