--- a/day4/day4-video.html
+++ b/day4/day4-video.html
@@ -31,12 +31,7 @@
       <h1>Day 4 · Raw to Reset</h1>
       <p class="lead"><strong>This isn't a crash.</strong> — It's a signal.</p>
     </header>
-    <div class="player">
-      <video controls playsinline preload="metadata" poster="day4.jpg">
-        <source src="day4vid.mp4" type="video/mp4" />
-        Sorry — your browser doesn’t support embedded video.
-      </video>
-    </div>
+    <div style="position:relative;padding-top:56.25%;"><iframe src="https://iframe.mediadelivery.net/embed/504868/4372d0dd-1beb-4588-bf26-c19f5228fa86?autoplay=true&loop=false&muted=false&preload=true&responsive=true" loading="lazy" style="border:0;position:absolute;top:0;height:100%;width:100%;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" allowfullscreen="true"></iframe></div>
     <div class="cta">
       <a class="btn" href="/cheatsheet/" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
       <a class="btn" href="mailto:rawtoresetsupport@artificialmomentum.com">Ask a Question</a>
