Style update: highlighted footer message

--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -59,7 +59,29 @@
   html, body { background: #fff !important; }
 }
 
+<style>
+  .got-question {
+    font-size: 18px;
+    font-weight: 600;
+    color: #FC8B73;
+    background: #fff3f0;
+    border: 2px solid #FC8B73;
+    border-radius: 12px;
+    padding: 12px 18px;
+    text-align: center;
+    margin-top: 28px;
+    display: inline-block;
+    transition: all 0.3s ease;
+  }
+
+  .got-question:hover {
+    background: #FC8B73;
+    color: #fff;
+    cursor: pointer;
+  }
 </style>
+
+
 </head>
 
 
@@ -130,7 +152,10 @@
 
     <p class="muted">Tip: Save this page for quick reference. PDF download coming soon.</p>
 
-<p class="muted">💬 Got a question? Note it down — I’ll be answering them in the live wrap-up Zoom call at the end of the reset.</p>
+<footer>
+  <p class="got-question">💬 Got a question? Note it down — I’ll be answering them in the live wrap-up Zoom call at the end of the reset.</p>
+</footer>
+
 
   </div>
 <script>
