--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -24,12 +24,43 @@
   ul{margin:8px 0 0 20px} li{margin:.25rem 0}
   .cta-row{display:flex;flex-wrap:wrap;gap:12px;justify-content:center;margin-top:18px}
   .btn{display:inline-block;background:var(--brand);color:#fff;text-decoration:none;padding:12px 18px;border-radius:999px;font-weight:700}
+  .btn {
+  cursor: pointer;
+}
+.btn.locked {
+  background: #fce3dd;
+  color: #888;
+  border-color: #f7b4a3;
+  cursor: not-allowed;
+}
+.btn.locked:hover {
+  background: #fce3dd;
+  color: #888;
+}
+
   .btn.secondary{background:#2D2D2D}
   .btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand)}
   .muted{opacity:.85;font-size:.95rem;text-align:center;margin-top:10px}
   .tiny{font-size:.92rem;color:var(--muted)}
   figure{margin:16px 0 0} figure img{width:100%;border-radius:12px}
   /* Print-friendly layout */
+  /* Footer Fade-In Animation */
+@keyframes fadeInFooter {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+footer {
+  text-align: center;
+  font-size: 1.05rem;
+  color: #FC8B73;
+  margin-top: 28px;
+  animation: fadeInFooter 1.5s ease-in-out 0.4s forwards;
+  opacity: 0;
+}
+footer strong {
+  color: #0D0D0E;
+}
+
 @media print {
   /* Page size & margins */
   @page { size: A4; margin: 18mm; }
@@ -119,15 +150,15 @@
     </section>
 
     <div class="cta-row">
-      <a class="btn" href="https://day2raw.artificialmomentum.com/">Watch Day 2 Video</a>
-      <a class="btn ghost" href="https://day3raw.artificialmomentum.com/cheatsheet/">Day 3 Cheat Sheet →</a>
-      <a class="btn ghost" href="mailto:rawtoresetcoaching@artificialmomentum.com">Ask a Question</a>
-      <a class="btn ghost" id="print-pdf">Download PDF</a>
+  <a class="btn" href="day2-video.html">Watch Today’s Video</a>
+  <a class="btn locked" href="#" onclick="return false;" title="Unlocks tomorrow">Day 3 Cheat Sheet →</a>
+  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+  <a class="btn ghost" id="print-pdf">Download PDF</a>
+</div>
 
-    </div>
-
-    <p class="muted">Tip: Save this page for quick reference. PDF download coming soon.</p>
-    <p class="muted">Remember, this reset ends with a live Zoom call. Send your questions in — we’ll cover them together.</p>
+<footer>
+  💬 Questions from yesterday are rolling in — don’t hold back. Your voice helps shape the live wrap-up Zoom call at the end of the reset.
+</footer>
 
   </div>
   <script>
