--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -37,10 +37,41 @@
     padding:12px 18px;border-radius:999px;font-weight:700}
   .btn.secondary{background:#2D2D2D}
   .btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand)}
+  .btn {
+  cursor: pointer;
+}
+.btn.locked {
+  background: #fce3dd;
+  color: #888;
+  border-color: #f7b4a3;
+  cursor: not-allowed;
+}
+.btn.locked:hover {
+  background: #fce3dd;
+  color: #888;
+}
+
   .muted{opacity:.85;font-size:.95rem;text-align:center;margin-top:10px}
   .tiny{font-size:.95rem;color:var(--muted)}
   .kicker{font-weight:700}
   /* Print-friendly layout */
+  /* Footer Fade-In Animation */
+@keyframes fadeInFooter {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+footer {
+  text-align: center;
+  font-size: 1.05rem;
+  color: #FC8B73;
+  margin-top: 28px;
+  animation: fadeInFooter 1.5s ease-in-out 0.4s forwards;
+  opacity: 0;
+}
+footer strong {
+  color: #0D0D0E;
+}
+
 @media print {
   /* Page size & margins */
   @page { size: A4; margin: 18mm; }
@@ -140,15 +171,15 @@
 
     <!-- CTAs -->
     <div class="cta-row">
-      <a class="btn" href="https://day3raw.artificialmomentum.com/">Watch Today’s Video</a>
-      <a class="btn" href="https://day4raw.artificialmomentum.com/cheatsheet/">Day 4 Cheat Sheet →</a>
-      <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-      <a class="btn ghost" id="print-pdf">Download PDF</a>
+  <a class="btn" href="day3-video.html">Watch Today’s Video</a>
+  <a class="btn locked" href="#" onclick="return false;" title="Unlocks tomorrow">Day 4 Cheat Sheet →</a>
+  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+  <a class="btn ghost" id="print-pdf">Download PDF</a>
+</div>
 
-    </div>
-
-    <p class="muted">Tip: Save this page for quick reference. You can download a PDF above when it’s ready.</p>
-    <p class="muted">We’re building toward the live wrap-up Zoom call. Collect your questions — nothing’s too small.</p>
+<footer>
+  💬 What’s landing for you so far? Note your insights — we’ll unpack them together in the live wrap-up Zoom call at the end of the reset.
+</footer>
 
   </div>
   <script>
