--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -45,22 +45,33 @@
   .kicker{font-weight:700}
   figure{margin:16px 0 0} figure img{width:100%;border-radius:12px}
   /* Print-friendly layout */
-  /* Footer Fade-In Animation */
-@keyframes fadeInFooter {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
+  /* Footer Slide-Up + Fade-In Animation */
+@keyframes slideUpFade {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
+
 footer {
   text-align: center;
   font-size: 1.05rem;
   color: #FC8B73;
-  margin-top: 28px;
-  animation: fadeInFooter 1.5s ease-in-out 0.4s forwards;
+  margin-top: 32px;
+  animation: slideUpFade 1.3s ease-out 0.4s forwards;
   opacity: 0;
+  line-height: 1.6;
+  font-weight: 500;
 }
+
 footer strong {
   color: #0D0D0E;
 }
+
 
 @media print {
   /* Page size & margins */
@@ -186,6 +197,7 @@ footer strong {
     <footer>
   💬 Got a question already? Note it down — I’ll be answering them live during the wrap-up Zoom call at the end of the reset.
 </footer>
+
 
 
   </div>
