--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -53,22 +53,41 @@
   .tiny{font-size:.9rem;color:var(--muted)}
   .kicker{font-weight:700}
   /* Print-friendly layout */
-  /* Footer Fade-In Animation */
-@keyframes fadeInFooter {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
+  /* Footer Slide-Up + Fade-In Animation */
+@keyframes slideUpFade {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
+
 footer {
   text-align: center;
-  font-size: 1.05rem;
-  color: #FC8B73;
-  margin-top: 28px;
-  animation: fadeInFooter 1.5s ease-in-out 0.4s forwards;
+  font-size: 1.1rem;
+  color: #0D0D0E; /* Stronger contrast */
+  margin-top: 48px; /* Adds more space from main content */
+  margin-bottom: 60px; /* Keeps it lifted above bottom edge */
+  font-weight: 600;
+  line-height: 1.7;
+  animation: slideUpFade 1.4s ease-out 0.3s forwards;
   opacity: 0;
 }
+
 footer strong {
-  color: #0D0D0E;
+  color: #FC8B73;
 }
+
+/* Optional: subtle hover polish */
+footer:hover {
+  color: #FC8B73;
+  transform: translateY(-2px);
+  transition: all 0.3s ease;
+}
+
 
 @media print {
   /* Page size & margins */
