--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -26,6 +26,14 @@
   .btn{display:inline-block;background:var(--brand);color:#fff;text-decoration:none;padding:12px 18px;border-radius:999px;font-weight:700}
   .btn {
   cursor: pointer;
+  .why {
+  display: block;
+  color: #6b2f23;
+  opacity: 0.85;
+  font-size: 0.92rem;
+  margin-top: 4px;
+}
+
 }
 .btn.locked {
   background: #fce3dd;
@@ -131,43 +139,52 @@ footer:hover {
     <section class="card">
       <h2>🧭 Cycle Lens</h2>
       <ul>
-        <li>Mid-luteal (≈10–14 days pre-bleed) is when misfits get magnified. You’re not “overreacting”; your brain is more honest about what’s off.</li>
-        <li>Chemistry shifts from protection → repair. The curtain pulls back on what isn’t working.</li>
+        <li>Mid-luteal (almost 2 weeks pre-bleed) is when misfits get magnified. You’re not “overreacting”; your brain is more honest about what’s off.</li>
+        <li>Chemistry shifts from protection to repair. The curtain has been pulled back and it becomes tough to fake a smile when something doesn't gel.</li>
       </ul>
     </section>
 
     <section class="card tone">
       <h2>🌙 Quick Win</h2>
-      <p><strong>Tonight:</strong> earlier lights + a food-based <strong>B-complex</strong> with dinner. Support progesterone metabolism, stabilise mood, and guard tomorrow from a crash. If symptoms are severe or disruptive, consider a hormone panel — more clarity, not more drama.</p>
+      <p><strong>Tonight:</strong> dim the lights and get cozy a couple of hours before bed, we're talking circadian rhythm. Then add to that a food-based <strong>B-complex</strong> with dinner. Support progesterone metabolism, stabilise mood, and guard tomorrow from a crash. If symptoms are severe or disruptive, consider a hormone panel — more clarity, not more drama.</p>
     </section>
 
     <section class="card">
-      <h2>🧪 Signals to Notice</h2>
-      <ul>
-        <li>Snappy, teary, “done with everyone” feelings → data, not defects.</li>
-        <li>“It’s not you, it’s your chemistry” — serotonin sensitivity + GABA/progesterone dynamics, sleep fragility.</li>
-        <li>The face is real: fewer hard conversations this week; build buffers.</li>
-      </ul>
-    </section>
+  <h2>🧪 Signals to Notice</h2>
+  <ul>
+    <li>
+      Snappy, teary, “done with everyone” feelings — really hear this:
+      <strong>this is data, not defects.</strong>
+      <br><em class="why">→ Your brain is flagging overstimulation and serotonin dip — not failure, just feedback.</em>
+    </li>
 
-    <section class="card">
-      <h2>🧰 Support Moves</h2>
-      <ul>
-        <li><strong>Nourish:</strong> protein + complex carbs + minerals at regular intervals.</li>
-        <li><strong>Calm the flag:</strong> earlier bedtime, darker evenings, reduce stimulants.</li>
-        <li><strong>Plan for reactivity:</strong> buffers and breaks; delay high-stakes decisions.</li>
-      </ul>
-    </section>
+    <li>
+      “It’s not you, it’s your chemistry.”
+      <br><em>During this window, estrogen dips and progesterone rises.</em>
+      That combo tweaks <strong>serotonin and GABA</strong> — the calm-and-steady messengers.
+      <br><em class="why">→ Translation: more emotion, lighter sleep, sharper edges — but all reversible when supported.</em>
+    </li>
 
-    <section class="card">
-      <h2>📝 Reflection Prompt</h2>
-      <p class="tiny"><em>Where is my world mismatched to how I feel? What can soften or defer this week? If I saw something clearly but can’t unsee it, I’ll park the conversation and give my nervous system peace first.</em></p>
-    </section>
+    <li>
+      Are you saying “yes” while your face says “hell no”?  
+      That’s the chemistry talking — let it guide your pacing, not your guilt.  
+      <br><em class="why">→ The luteal phase makes emotional filters thinner. Your feelings aren’t wrong — they’re just louder. Slow down; in a few days, you’ll deliver the same truth without wrecking your nervous system. Protect your peace and postpone the heavy stuff.</em>
+    </li>
+  </ul>
+</section>
 
-    <section class="card">
-      <h2>🧠 Why (mini-physiology)</h2>
-      <p class="tiny">Shifts in progesterone/GABA + serotonin sensitivity heighten reactivity and sleep fragility. Use light blockers at night, skip hard confrontations before bed, and try breathing, chamomile, or gentle somatics.</p>
-    </section>
+<section class="card">
+  <h2>🧠 Why (mini-physiology)</h2>
+  <p class="tiny">
+    As progesterone climbs and estrogen falls, your nervous system becomes more sensitive to imbalance. 
+    <strong>Serotonin</strong> (mood) and <strong>GABA</strong> (calm) both shift, making the brain quicker to react and slower to settle. 
+    This is the luteal “honesty filter”: you see what’s off, but lack the chemical cushion to soften it.
+  </p>
+  <p class="tiny">
+    <em class="why">Why it matters:</em> understanding this lets you support yourself instead of self-critiquing. 
+    Light discipline, balanced meals, and fewer screens at night rebuild that cushion from the inside out.
+  </p>
+</section>
 
     <div class="cta-row">
   <a class="btn" href="day2-video.html">Watch Today’s Video</a>
