Updated day3 cheatsheet

--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -153,9 +153,9 @@ footer:hover {
   <h2>🧪 Signals to Notice</h2>
   <ul>
     <li>
-      Snappy, teary, “done with everyone” feelings — really hear this:
+      Snappy, teary, “done with everyone” feelings — <strong> you need to really hear this point:</strong>
       <strong>this is data, not defects.</strong>
-      <br><em class="why">→ Your brain is flagging overstimulation and serotonin dip — not failure, just feedback.</em>
+      <br><em class="why">→ Your brain is flagging overstimulation and a serotonin dip — not failure, just feedback. This is biology doing it's thing. Hang in there, it'll pass.</em>
     </li>
 
     <li>
@@ -168,7 +168,7 @@ footer:hover {
     <li>
       Are you saying “yes” while your face says “hell no”?  
       That’s the chemistry talking — let it guide your pacing, not your guilt.  
-      <br><em class="why">→ The luteal phase makes emotional filters thinner. Your feelings aren’t wrong — they’re just louder. Slow down; in a few days, you’ll deliver the same truth without wrecking your nervous system. Protect your peace and postpone the heavy stuff.</em>
+      <br><em class="why">→ The luteal phase makes emotional filters thinner. Your feelings aren’t wrong — they’re just louder. Slow down; in a few days, you can deliver the same truth without wrecking your nervous system. Protect your peace and postpone the heavy stuff.</em>
     </li>
   </ul>
 </section>
@@ -194,8 +194,9 @@ footer:hover {
 </div>
 
 <footer>
-  💬 Questions from yesterday are rolling in — don’t hold back. Your voice helps shape the live wrap-up Zoom call at the end of the reset.
+  👆 Questions from yesterday are rolling in — don’t hold back. Your voice helps shape the live wrap-up Zoom call at the end of the reset.
 </footer>
+
 
   </div>
   <script>
