--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -158,35 +158,40 @@ footer:hover {
 
     <!-- Signals -->
     <section class="card">
-      <h2>🧪 Signals to Notice</h2>
-      <ul>
-        <li>Afternoon crash, cravings, irritability → likely <strong>under-fueling</strong> + <strong>stress load</strong>.</li>
-        <li>Bloat that follows swings in cortisol/glucose → not a moral failure.</li>
-        <li>Feeling like you “should push through” is the trap.</li>
-      </ul>
-    </section>
+<!-- Signals + Why Combined Section -->
+<section class="card">
+  <h2>🧪 Signals to Notice</h2>
+  <ul>
+    <li>
+      Motivation dips or irritability? Not laziness — <strong>it’s chemistry shifting gears.</strong>
+      <br><em class="why">→ Estrogen is tapering off, and progesterone is rising. That changes how your body uses glucose and neurotransmitters — so your usual pace might suddenly feel “off.”</em>
+    </li>
 
-    <!-- Support -->
-    <section class="card">
-      <h2>🧰 Support Moves</h2>
-      <ul>
-        <li><strong>Fuel rhythm:</strong> protein at breakfast + a real lunch (not just coffee).</li>
-        <li><strong>Move, don’t punish:</strong> 10–20 minutes easy walk or mobility instead of forcing a max session.</li>
-        <li><strong>Electrolytes + magnesium:</strong> support the stress axis while you refuel.</li>
-      </ul>
-    </section>
+    <li>
+      Afternoon crash or “can’t focus” moments — your nervous system is asking for fuel, not guilt.
+      <br><em class="why">→ When cortisol and glucose misalign, brain fog and cravings are just biochemical messages. Try protein + minerals mid-morning to reset stability.</em>
+    </li>
 
-    <!-- Reflection -->
-    <section class="card">
-      <h2>📝 Reflection Prompt</h2>
-      <p class="tiny"><em>What story do I tell myself when energy dips? What happens if I answer with fuel instead of self-criticism?</em></p>
-    </section>
+    <li>
+      Feeling like your body’s “shoulds” are arguing with your energy? You’re not failing, you’re recalibrating.
+      <br><em class="why">→ This phase thrives on rhythm, not pressure. Backing off a sprint here means smoother hormones later.</em>
+    </li>
+  </ul>
+</section>
 
-    <!-- Why -->
-    <section class="card">
-      <h2>🧠 Why (mini-physiology)</h2>
-      <p class="tiny">Cortisol/glucose oscillations drive cravings; <strong>protein + minerals</strong> stabilize.</p>
-    </section>
+<section class="card">
+  <h2>🧠 Why (mini-physiology)</h2>
+  <p class="tiny">
+    As estrogen declines and progesterone takes the lead, your brain’s glucose use slows slightly — 
+    especially in the prefrontal cortex (focus, drive, planning). 
+    The body redirects resources toward repair and progesterone’s calming work.
+  </p>
+  <p class="tiny">
+    <em class="why">Why it matters:</em> supporting this phase with balanced meals and recovery movement keeps your nervous system steady and stops mid-cycle crashes. 
+    Think nourishment over perfection — your hormones are shifting from creation to conservation mode.
+  </p>
+</section>
+
 
     <!-- CTAs -->
     <div class="cta-row">
