Updated Day 1 cheatsheet styling and moved pointer emoji

--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -156,14 +156,14 @@ footer:hover {
     <section class="card">
       <h2>🧭 Cycle Lens</h2>
       <ul>
-        <li>Works in any phase, especially <strong>Menstruation (Days 1–5)</strong>. From Day 1 you might feel “nearly ready” — steady the pace and set the board, don’t sprint.</li>
-        <li>Your nervous system is asking for <em>pacing</em>. Line up the skittles in the first couple of days; you’re not letting anyone down. You’re perfecting the game.</li>
+        <li>Works in any phase, especially <strong>Menstruation (Days 1–5)</strong>. From Day 1 you might feel “nearly ready” to launch into whatever you haven't been able to get into in the Luteal phase — steady the pace though and set the board, don’t sprint.</li>
+        <li>Your nervous system is asking for <em>pacing</em>. Line up the skittles in the first couple of days; you’re not letting anyone down if you don't take the shot. You’re perfecting the game and you'll score a strike in a day or two.  </li>
       </ul>
     </section>
 
     <section class="card tone">
       <h2>💧 Quick Win</h2>
-      <p><span class="kicker">Before coffee tomorrow:</span> drink a big glass of water + electrolytes. It gently wakes your nervous system, balances blood pressure, and fuels steady energy. Add lemon + a pinch of mineral salt or use an electrolyte mix.</p>
+      <p><span class="kicker">Before coffee tomorrow:</span> drink a big glass of water + electrolytes. It gently wakes your nervous system, balances blood pressure, and fuels steady energy. If you don't have electrolytes — Add lemon + a pinch of mineral salt.</p>
     </section>
 
     <section class="card">
@@ -171,16 +171,16 @@ footer:hover {
       <ul>
         <li><strong>Mood swings or cravings</strong> → be your body's ally. It's asking for balance, not punishment.</li>
         <li><strong>Low energy</strong> → a nervous-system flag, not laziness. (Ban the “I’m lazy” label.)</li>
-        <li><strong>Foggy brain</strong> → hydration + minerals often help. Screens off for 30 minutes and call someone who lifts you. (Maybe not Mum after months of radio silence 🙃)</li>
+        <li><strong>Foggy brain</strong> → hydration + minerals often help. Try screens off and connection for 30 minutes, call someone who lifts you. (We're not looking for raw feelings right now so maybe not Mum after months of radio silence 🙃)</li>
       </ul>
     </section>
 
     <section class="card">
       <h2>🧰 Support Moves</h2>
       <ul>
-        <li><strong>Fuel early:</strong> protein + minerals within 60 minutes of waking. My mix: electrolytes, creatine, and pea protein after an overnight fast (tune length to your body + phase).</li>
+        <li><strong>Fuel early:</strong> protein + minerals within 60 minutes of waking. My mix: electrolytes, creatine, and pea protein after an overnight fast (tune the length of your fasting window to your body + cycle phase).</li>
         <li><strong>Pace:</strong> swap “push through” for <em>listening</em>. Lighter movement counts — think yoga over HIIT.</li>
-        <li><strong>Grace:</strong> if you’re ADHD/ND like me, the inner narrator can drag. Offer yourself the same kindness you’d give your child. A few go-to mantras help ❤️</li>
+        <li><strong>Grace:</strong> if you’re ADHD/RSD/ND like me, the inner narrator can really drag you down. Offer yourself the same kindness you’d give your child. A few go-to mantras help ❤️ "This will pass, my body's got my back and it's working behind the scenes."</li>
       </ul>
     </section>
 
