--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -32,6 +32,10 @@
   opacity: 0.85;
   font-size: 0.92rem;
   margin-top: 4px;
+footer {
+  margin-bottom: 80px;
+}
+
 }
 
 }
@@ -194,7 +198,7 @@ footer:hover {
 </div>
 
 <footer>
-  👆 Questions from yesterday are rolling in — don’t hold back. Your voice helps shape the live wrap-up Zoom call at the end of the reset.
+   Questions from yesterday are rolling in — don’t hold back. Your voice helps shape the live wrap-up Zoom call at the end of the reset.☝
 </footer>
 
 
