support moves and relection prompt added

--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -176,6 +176,21 @@ footer:hover {
     </li>
   </ul>
 </section>
+<section class="card">
+  <h2>🧭 Support Moves</h2>
+  <ul>
+    <li><strong>Ground with minerals + protein</strong> — pair magnesium-rich foods and lean protein at dinner to calm the evening drop.</li>
+    <li><strong>Guard your wind-down</strong> — blue-light off two hours before bed; keep lights low and thoughts lighter.</li>
+    <li><strong>Slow input</strong> — journal, stretch, or tidy small spaces. You’re helping the nervous system file the day, not fix it.</li>
+  </ul>
+  <em class="why">→ These rituals re-signal safety to the brain so hormones can recalibrate overnight.</em>
+</section>
+
+<section class="card">
+  <h2>💭 Reflection Prompt</h2>
+  <p>Where did honesty show up today? Did slowing down create clarity instead of guilt?</p>
+  <em class="why">→ Note the moments your body asked for stillness and what happened when you listened.</em>
+</section>
 
 <section class="card">
   <h2>🧠 Why (mini-physiology)</h2>
