Support moves and reflection promt added

--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -178,6 +178,21 @@ footer:hover {
     </li>
   </ul>
 </section>
+<section class="card">
+  <h2>🧭 Support Moves</h2>
+  <ul>
+    <li><strong>Front-load protein + fiber</strong> — 20–30 g protein with breakfast steadies blood sugar and mood.</li>
+    <li><strong>Move to spark, not drain</strong> — a brisk walk or short weights session boosts dopamine without tipping cortisol.</li>
+    <li><strong>Hydrate steadily</strong> — water + minerals keep estrogen’s energy lift smooth instead of spiky.</li>
+  </ul>
+  <em class="why">→ Consistency fuels clarity. You’re teaching your brain what steady feels like again.</em>
+</section>
+
+<section class="card">
+  <h2>💭 Reflection Prompt</h2>
+  <p>What felt easier to start today? Where did focus flow without forcing it?</p>
+  <em class="why">→ Celebrate stability — this is your brain catching its rhythm.</em>
+</section>
 
 <section class="card">
   <h2>🧠 Why (mini-physiology)</h2>
