--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -164,20 +164,17 @@ footer:hover {
     <section class="card">
       <h2>🧭 Cycle Lens</h2>
       <ul>
-        <li>Late follicular → luteal transition = appetite/sugar swings spike. It’s right after ovulation; you’re either prepping to bleed or your body’s prepping to grow a baby.</li>
-        <li>Misfits magnify — you’re not suddenly "moody," you're just less willing to swallow what annoys you. The rest of the month it's applauded as emotional maturity. Today it gets mislabeled PMS when you finally snap at the same tired joke. Well… hello 🤦‍♀️🙃</li>
-      </ul>
+  <li>Late follicular → luteal transition = appetite/sugar swings spike. It’s right after ovulation: you’re either prepping to bleed or your body’s prepping to grow a baby.</li>
+  <li>Misfits magnify — you’re not suddenly “moody,” you’re just less willing to swallow what annoys you. The rest of the month it’s applauded as emotional maturity. Today it gets mislabelled PMS when you finally snap at the same tired joke. Well… hello 🙃</li>
+</ul>
+
     </section>
 
-    <!-- Quick win -->
     <section class="card tone">
-      <h2>💡 Quick Win</h2>
-      <p><span class="kicker">Mid-morning anchor:</span> <strong>20–30 g protein + fiber + minerals.</strong>
-        This steadies blood sugar, reduces cravings, and brings your brain back into usable focus.</p>
-    </section>
+      <h2>🌙 Quick Win</h2>
+      <p><strong>Mid-morning anchor:</strong> 20–30 g protein + fiber + minerals. This steadies blood sugar, reduces cravings, and brings your brain back into usable focus.</p>
 
-    <!-- Signals -->
-    <section class="card">
+    </section>
 <!-- Signals + Why Combined Section -->
 <section class="card">
   <h2>🧪 Signals to Notice</h2>
@@ -201,25 +198,27 @@ footer:hover {
 <section class="card">
   <h2>🧭 Support Moves</h2>
   <ul>
-    <li><strong>Front-load protein + fiber</strong> — 20–30 g protein with breakfast steadies blood sugar and mood.</li>
-    <li><strong>Move to spark, not drain</strong> — a brisk walk or short weights session boosts dopamine without tipping cortisol.</li>
-    <li><strong>Hydrate steadily</strong> — water + minerals keep estrogen’s energy lift smooth instead of spiky.</li>
-  </ul>
-  <em class="why">→ Consistency fuels clarity. You’re teaching your brain what steady feels like again.</em>
+  <li><strong>Front-load protein + fiber</strong> — 20–30 g with breakfast steadies blood sugar and mood.</li>
+  <li><strong>Move to spark, not drain</strong> — a brisk walk or short weights session boosts dopamine without tipping cortisol.</li>
+  <li><strong>Hydrate steadily</strong> — water + minerals keep estrogen’s energy lift smooth instead of spiky.</li>
+</ul>
+<em class="why">→ Consistency fuels clarity. You’re teaching your brain what steady feels like again.</em>
+
 </section>
 
 <section class="card">
   <h2>💭 Reflection Prompt</h2>
   <p>What felt easier to start today? Where did focus flow without forcing it?</p>
-  <em class="why">→ Celebrate stability — this is your brain catching its rhythm.</em>
+<em class="why">→ Celebrate stability — this is your brain catching its rhythm.</em>
+
 </section>
 
 <section class="card">
   <h2>🧠 Why (mini-physiology)</h2>
   <p class="tiny">
-    As estrogen declines and progesterone takes the lead, your brain’s glucose use slows slightly — 
-    especially in the prefrontal cortex (focus, drive, planning). 
-    The body redirects resources toward repair and progesterone’s calming work.
+    As estrogen declines and progesterone takes the lead, your brain’s glucose use slows slightly — especially in the prefrontal cortex (focus, drive, planning). The body redirects resources toward repair and progesterone’s calming work.
+    <strong>Why it matters:<strong></strong>
+    supporting this phase with balanced meals and recovery movement keeps your nervous system steady and stops mid-cycle crashes. Think nourishment over perfection — your hormones are shifting from creation to conservation mode.
   </p>
   <p class="tiny">
     <em class="why">Why it matters:</em> supporting this phase with balanced meals and recovery movement keeps your nervous system steady and stops mid-cycle crashes. 
