--- a/day3/day3-video.html
+++ b/day3/day3-video.html
@@ -1,45 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Raw to Reset — Day 3</title>
-  <meta name="description" content="I’m not lazy. I need fuel." />
-  <link rel="preload" as="image" href="day3.jpg">
-  <style>
-    body { font-family: system-ui, sans-serif; background: #F7F7F7; color: #0D0D0E; margin: 0; padding: 0; }
-    .wrap { max-width: 900px; margin: auto; padding: 16px; }
-    header { background: #FC8B73; padding: 18px; border-radius: 18px; text-align: center; max-width: 620px; margin: 0 auto; }
-    h1 { margin: 0; font-size: clamp(24px, 4vw, 34px); color: white; }
-    p.lead { margin: 8px 0 0; opacity: .9; color: white; }
-    .player { margin: 18px 0; border-radius: 18px; overflow: hidden; box-shadow: 0 8px 28px rgba(0,0,0,.12); background: #000; }
-    video { width: 100%; height: auto; display: block; }
-    .cta { display: flex; gap: 12px; flex-wrap: wrap; justify-content: center; margin: 18px 0; }
-    .btn { background: #FC8B73; color: white; padding: 12px 18px; border-radius: 999px; text-decoration: none; font-weight: 700; }
-    .btn:hover { filter: brightness(1.05); }
-    .muted { font-size: .95rem; opacity: .8; text-align: center; }
-    footer { margin: 26px 0 10px; text-align: center; font-size: .9rem; opacity: .75; }
-    @media (min-width: 900px){
-      .player{max-width:620px; margin:18px auto;}
-    }
-    video{max-height:80vh; object-fit:contain;}
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Day 3 – Raw to Reset</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <h1>Day 3 · Raw to Reset</h1>
-      <p class="lead"><strong>I’m not lazy</strong> — I need fuel.</p>
-    </header>
-    <div style="position:relative;padding-top:56.25%;"><iframe src="https://iframe.mediadelivery.net/embed/504868/14c58830-5ffe-41b4-895a-78bc4c70f72f?autoplay=true&loop=false&muted=false&preload=true&responsive=true" loading="lazy" style="border:0;position:absolute;top:0;height:100%;width:100%;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" allowfullscreen="true"></iframe></div>
-    <div class="cta">
-      <a class="btn" href="/cheatsheet/" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
-      <a class="btn" href="mailto:rawtoresetsupport@artificialmomentum.com">Ask a Question</a>
+  <header>
+    <h1>Day 3 · Raw to Reset</h1>
+    <p><em>I’m not lazy — I need fuel.</em></p>
+  </header>
+
+  <div class="player">
+    <div style="position:relative;width:100%;max-width:480px;margin:auto;">
+      <iframe
+        src="https://iframe.mediadelivery.net/embed/504868/YOUR-VIDEO-ID?autoplay=false&responsive=true&poster=https://raw.artificialmomentum.com/portrait1.jpg"
+        loading="lazy"
+        style="border:0;border-radius:12px;width:100%;aspect-ratio:9/16;"
+        allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;"
+        allowfullscreen>
+      </iframe>
     </div>
-    <p class="muted">Tip: If video is choppy on mobile, switch Wi-Fi or tap the ••• menu to <em>Download</em> and watch locally.<br><a href="day3vid.mp4" download>Download the video</a></p>
-    <footer>© Artificial Momentum · Diana Air Coaching × ECHO</footer>
   </div>
+
+  <div class="buttons">
+    <a class="btn" href="/day3/day3-cheatsheet.html" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
+    <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+  </div>
+
+  <p class="tip">
+    Tip: If video is choppy on mobile, switch Wi-Fi off or tap the ⋯ menu to <strong>Download</strong> and watch locally.  
+    <br><a href="#">Download the video</a>
+  </p>
+
+  <footer>
+    <p>© Artificial Momentum · Diana Air Coaching × ECHO</p>
+  </footer>
 </body>
 </html>
-
-
