Fix poster syntax

--- a/day3/day3-video.html
+++ b/day3/day3-video.html
@@ -13,17 +13,18 @@
   </header>
 
   <div class="player">
-    <div style="position:relative;width:100%;max-width:480px;margin:auto;">
-      <iframe
-        src="<div style="position:relative;padding-top:56.25%;"><iframe 
-          src="https://iframe.mediadelivery.net/embed/504868/14c58830-5ffe-41b4-895a-78bc4c70f72f?autoplay=true&loop=false&muted=false&preload=true&responsive=true" loading="lazy" style="border:0;position:absolute;top:0;height:100%;width:100%;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" allowfullscreen="true"></iframe></div>"
-        loading="lazy"
-        style="border:0;border-radius:12px;width:100%;aspect-ratio:9/16;"
-        allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;"
-        allowfullscreen>
-      </iframe>
-    </div>
+  <div style="position:relative;width:100%;max-width:480px;margin:auto;">
+    <iframe
+      src="https://iframe.mediadelivery.net/embed/504868/14c583f0-5ffe-41b4-895a-78bc4c70f72f?autoplay=false&responsive=true"
+      poster="../assets/portrait1.jpg"
+      loading="lazy"
+      style="border:0;border-radius:12px;width:100%;aspect-ratio:9/16;"
+      allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;"
+      allowfullscreen>
+    </iframe>
   </div>
+</div>
+
 
   <div class="buttons">
     <a class="btn" href="/day3/day3-cheatsheet.html" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
