--- a/day3/day3-video.html
+++ b/day3/day3-video.html
@@ -13,16 +13,15 @@
   </header>
 
   <div class="player">
-  <div style="position:relative;width:100%;max-width:480px;margin:auto;">
-    <iframe 
-      src="https://iframe.mediadelivery.net/embed/504868/14c583f0-5ffe-41b4-895a-78bc4c70f72f?autoplay=false&responsive=true" 
-      loading="lazy" 
-      style="border:0;border-radius:12px;width:100%;aspect-ratio:9/16;" 
-      allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" 
-      allowfullscreen>
-    </iframe>
-  </div>
+  <iframe 
+    src="https://iframe.mediadelivery.net/embed/504868/14c58830-5ffe-41b4-895a-78bc4c70f72f?autoplay=false&responsive=true"
+    loading="lazy"
+    style="border:0;border-radius:12px;width:100%;max-width:480px;aspect-ratio:9/16;"
+    allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture"
+    allowfullscreen>
+  </iframe>
 </div>
+
 
 
 
