--- a/day3/day3-video.html
+++ b/day3/day3-video.html
@@ -12,14 +12,16 @@
     <p><em>I’m not lazy — I need fuel.</em></p>
   </header>
 
-  <div class="player">
-  <iframe 
-    src="https://iframe.mediadelivery.net/embed/504868/14c58830-5ffe-41b4-895a-78bc4c70f72f?autoplay=false&responsive=true"
-    loading="lazy"
-    style="border:0;border-radius:12px;width:100%;max-width:480px;aspect-ratio:9/16;"
-    allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture"
-    allowfullscreen>
-  </iframe>
+  <div class="player" style="display:flex;justify-content:center;margin:2rem 0;">
+  <div style="position:relative;width:100%;max-width:480px;aspect-ratio:9/16;">
+    <iframe 
+      src="https://iframe.mediadelivery.net/embed/504868/14c58830-5ffe-41b4-895a-78bc4c70f72f?autoplay=false&responsive=true" 
+      loading="lazy" 
+      style="border:0;border-radius:12px;width:100%;height:100%;" 
+      allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
 </div>
 
 
