Fix video ratio and cheatsheet links

--- a/day1/day1-video.html
+++ b/day1/day1-video.html
@@ -47,7 +47,7 @@
     </div>
     <div class="cta">
       <a class="btn" href="day1-cheatsheet.html" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
-      <a class="btn" href="mailto:rawtoresetsupport@artificialmomentum.com">Ask a Question</a>
+      <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
     </div>
     <p class="muted">Tip: If video is choppy on mobile, switch Wi-Fi or tap the ••• menu to <em>Download</em> and watch locally.<br><a href="day1vid.mp4" download>Download the video</a></p>
     <footer>© Artificial Momentum · Diana Air Coaching × ECHO</footer>
