--- a/day2/day2-video.html
+++ b/day2/day2-video.html
@@ -35,17 +35,17 @@
   <div style="position:relative;padding-top:56.25%;">
     <iframe 
       src="https://iframe.mediadelivery.net/embed/504868/43e7403a-e607-4291-b208-526d7ef2850e?autoplay=true&loop=false&muted=false&preload=true&responsive=true" 
-      loading="lazy" 
-      style="border:0;position:absolute;top:0;height:100%;width:100%;" 
-      allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" 
-      allowfullscreen="true">
+      loading="lazy"
+      style="border:0;position:absolute;top:0;height:100%;width:100%;"
+      allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;"
+      allowfullscreen>
     </iframe>
   </div>
 </div>
 
     <div class="cta">
-      <a class="btn" href="/cheatsheet/" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
-      <a class="btn" href="mailto:rawtoresetsupport@artificialmomentum.com">Ask a Question</a>
+      <a class="btn" href="day2-cheatsheet.html" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
+      <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
     </div>
     <p class="muted">Tip: If video is choppy on mobile, switch Wi-Fi or tap the ••• menu to <em>Download</em> and watch locally.<br><a href="day2video.mp4" download>Download the video</a></p>
     <footer>© Artificial Momentum · Diana Air Coaching × ECHO</footer>
