--- a/day5/day5-video.html
+++ b/day5/day5-video.html
@@ -31,10 +31,20 @@
       <h1>Day 5 · Raw to Reset</h1>
       <p class="lead"><strong>This is what happens when you stop fighting</strong> — and start listening.</p>
     </header>
-    <div style="position:relative;padding-top:56.25%;"><iframe src="https://iframe.mediadelivery.net/embed/504868/9f721ed8-a9d3-45df-a7fb-e01fc4cafd06?autoplay=true&loop=false&muted=false&preload=true&responsive=true" loading="lazy" style="border:0;position:absolute;top:0;height:100%;width:100%;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" allowfullscreen="true"></iframe></div>
+    <div class="player">
+  <div style="position:relative;padding-top:56.25%;">
+    <iframe 
+      src="https://iframe.mediadelivery.net/embed/504868/9f721ed8-a9d3-45df-a7fb-e01fc4cafd06?autoplay=true&loop=false&muted=false&preload=true&responsive=true" 
+      loading="lazy"
+      style="border:0;position:absolute;top:0;height:100%;width:100%;"
+      allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;"
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
     <div class="cta">
-      <a class="btn" href="/cheatsheet/" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
-      <a class="btn" href="mailto:rawtoresetsupport@artificialmomentum.com">Ask a Question</a>
+      <a class="btn" href="day5-cheatsheet.html" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
+      <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
     </div>
     <p class="muted">Tip: If video is choppy on mobile, switch Wi-Fi or tap the ••• menu to <em>Download</em> and watch locally.<br><a href="day5vid.mp4" download>Download the video</a></p>
     <footer>© Artificial Momentum · Diana Air Coaching × ECHO</footer>
