Adjust Day 3 video aspect ratio

--- a/day3/day3-video.html
+++ b/day3/day3-video.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Raw to Reset — Day 3</title>
-  <meta name="description" content="Bloat, burnout and the Bullsh*t we've normalized. Day 3 of Raw to Reset." />
+  <meta name="description" content="Bloat, Burnout, and the bullsh*t we've normalized." />
   <link rel="preload" as="image" href="day3.jpg">
   <style>
     body { font-family: system-ui, sans-serif; background: #F7F7F7; color: #0D0D0E; margin: 0; padding: 0; }
@@ -42,12 +42,11 @@
     </iframe>
   </div>
 </div>
-
     <div class="cta">
       <a class="btn" href="day3-cheatsheet.html" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
       <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
     </div>
-    <p class="muted">Tip: If video is choppy on mobile, switch Wi-Fi or tap the ••• menu to <em>Download</em> and watch locally.<br><a href="day2video.mp4" download>Download the video</a></p>
+    <p class="muted">Tip: If video is choppy on mobile, switch Wi-Fi or tap the ••• menu to <em>Download</em> and watch locally.<br><a href="day4vid.mp4" download>Download the video</a></p>
     <footer>© Artificial Momentum · Diana Air Coaching × ECHO</footer>
   </div>
 </body>
