Adjust Day 3 video aspect ratio

--- a/day3/day3-video.html
+++ b/day3/day3-video.html
@@ -34,7 +34,7 @@
     <div class="player">
   <div style="position:relative;padding-top:56.25%;">
     <iframe 
-      src="https://iframe.mediadelivery.net/play/504868/14c58830-5ffe-41b4-895a-78bc4c70f72f" 
+      src="https://iframe.mediadelivery.net/play/504868/14c58830-5ffe-41b4-895a-78bc4c70f72f?autoplay=true&loop=false&muted=false&preload=true&responsive=true" 
       loading="lazy"
       style="border:0;position:absolute;top:0;height:100%;width:100%;"
       allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;"
