--- a/day3/day3-video.html
+++ b/day3/day3-video.html
@@ -90,7 +90,7 @@
   <div class="wrap">
     <header>
       <h1>Day 3 · Raw to Reset</h1>
-      <p class="lead"><strong>You're not lazy &amp; Restore</strong> — You need fuel.</p>
+      <p class="lead"><strong>I'm not lazy amp; </strong> — I need fuel.</p>
     </header>
 
     <div class="player">
